Update NIO2 use
Use Files.newInputStream() and Path.of().

Change-Id: I8426263410847fd5d4d16f388684f34e5a75057f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>